Fix flicker issue in photography section for old webkit browsers

--- a/_sass/munky/_photography.scss
+++ b/_sass/munky/_photography.scss
@@ -10,6 +10,7 @@ section#photos article {
 
 .gallery img {
   -webkit-transform: scale(1);
+  -webkit-backface-visibility: hidden;
 	transform: scale(1);
   -ms-transform: scale(1);
 	-webkit-transition: 1s ease;
